--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-# Compiled class file
-*.class
+# IntelliJ
+**/out/
+/classes/
 
-# Log file
-*.log
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-# BlueJ files
-*.ctxt
+# JIRA plugin
+atlassian-ide-plugin.xml
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+
+
+
+.idea
+.ideaDataSources
+
+project-dependencies.dot
+project-dependencies.png
